Metadata checks: check all PIs for completeness, citation author list, allow empty end dates.